--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,13 @@ code {
   background-color: green;
   width: 200px;
 }
+
+.iframe-container {
+  width: 816px;
+  height: 516px;
+}
+
+.modal-button {
+  height: 50px;
+  margin-left: 8px;
+}
